[gd_scene load_steps=8 format=3 uid="uid://befumbu5bw0kn"]

[ext_resource type="Script" path="res://Scenes/Turrets/Chiligun/chiligun_projectile.gd" id="1_e41ex"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cdm4g"]
transparency = 2
alpha_scissor_threshold = 1.0
alpha_antialiasing_mode = 0
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.176471, 0.101961, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kgsi4"]
emission_shape = 1
emission_sphere_radius = 0.2
spread = 40.0
flatness = 1.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
turbulence_noise_strength = 6.9
turbulence_noise_scale = 2.855

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ppqbg"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ejotp"]
material = SubResource("StandardMaterial3D_ppqbg")
radius = 0.02
height = 0.04
radial_segments = 16
rings = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y0rad"]
transparency = 2
alpha_scissor_threshold = 1.0
alpha_antialiasing_mode = 0
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.796078, 0.411765, 0.180392, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g1r6e"]
transparency = 2
alpha_scissor_threshold = 1.0
alpha_antialiasing_mode = 0
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.682353, 0.317647, 0, 1)

[node name="ChiligunProjectileArea" type="Area3D" groups=["AOE"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_e41ex")

[node name="ChiliSpray" type="GPUParticles3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cdm4g")
emitting = false
amount = 75
lifetime = 0.35
speed_scale = 1.2
fixed_fps = 60
trail_lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_kgsi4")
draw_pass_1 = SubResource("SphereMesh_ejotp")

[node name="ChiliSpray2" type="GPUParticles3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.00857663, 0)
material_override = SubResource("StandardMaterial3D_y0rad")
emitting = false
amount = 75
lifetime = 0.35
speed_scale = 1.2
fixed_fps = 60
trail_lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_kgsi4")
draw_pass_1 = SubResource("SphereMesh_ejotp")

[node name="ChiliSpray3" type="GPUParticles3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.00857663, 0)
material_override = SubResource("StandardMaterial3D_g1r6e")
emitting = false
amount = 75
lifetime = 0.35
speed_scale = 1.2
fixed_fps = 60
trail_lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_kgsi4")
draw_pass_1 = SubResource("SphereMesh_ejotp")

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, -0.110581, 0)
polygon = PackedVector2Array(-0.141195, -0.147387, -0.148946, 0.172823, 1.35643, 1.2065, 1.69766, 0.00241192, 1.35533, -1.20173)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
